# cpp_template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
hello/: CMakeLists.txt  hello.cpp  hello.h
tests/: CMakeLists.txt  test_hello.cpp
world/: CMakeLists.txt  world.cpp  world.h
